# Grimoire

./: .env  .env.example  .gitignore  docker-compose.yml  prod.docker-compose.yml
.github/workflows/: cd.yml
bot/: .env  pyproject.toml
bot/bot/: __main__.py
bot/bot/middleware/: analytics.py  grimoire.py  policies.py
bot/bot/utils/: db.py  embeds.py  help.py  prepare.py  server.py  server_channel.py  user.py
bot/cogs/: ai.py  comics.py  dictionaries.py  own.py  server.py  test.py  weeb.py
bot/pymon/: __main__.py  monitor.py
bot/surrealdb/: __init__.py  common.py  ws.py
db/migrations/: database.surql
docker/dev/: bot.dockerfile
docker/prod/: bot.dockerfile
src/lib/components/ui/: avatar.tsx
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: app.d.ts  app.pcss  hooks.server.ts
web/src/lib/components/fragments/header/: header.svelte
web/src/lib/components/fragments/login-with-guilded/: login-with-guilded.svelte
web/src/lib/components/layercake/: AreaD3.svelte  LineD3.svelte  Radar.svelte  RadialAxis.svelte  Scatter.svelte  XAxis.svelte  YAxis.svelte
web/src/lib/types/: command-log.ts  user.ts
web/src/lib/utils/: auth.ts  surreal-client.ts  surreal-root.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
web/src/routes/(auth)/login/: +page.server.ts
web/src/routes/(auth)/logout/: +page.server.ts
web/src/routes/(private)/: +layout.server.ts  +layout.svelte
web/src/routes/(private)/dashboard/: +page.svelte
web/src/routes/(test)/line/: +page.svelte
web/src/routes/(test)/radar/: +page.svelte
